Provide way to manually start migration for testing
Add method to wait for migration to finish
Catch exceptions from each task when closing